# doggelganger_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  app.py  check_adoption_links.py  doggleganger.py  embeddings.py  entrypoint.sh  push_embeddings.py  pyproject.toml  serve.Dockerfile  serve.py  slim_image.sh  train.py
.github/workflows/: docker-image.yml  test-and-deploy.yml
.mint/: probeCmds.json
archive/: doggleganger.py  embeddings.py  parse_name.py  petfinder_scraper.py
data/carousel/: dog_metadata.json
data/petfinder/: dog_metadata.json
doggelganger/: requirements.txt  serve.Dockerfile  serve.py  train.py  utils.py
notebooks/: embeddings_exploration.py  example.ipynb  model_comparison.ipynb  model_comparison.py
scripts/: check_adoption_links.py  check_links.py  download_dogs.py  make_carousel.py  model_comparison.py  parse_name.py  petfinder_scraper.py  pt.sh  push_embeddings.py  scrape.py
src/: __init__.py  embeddings.py  push_embeddings.py  requirements.txt  serve.Dockerfile  serve.py  train.py  utils.py
src/doggelganger/: embed.py  embed_prefetch.py  embed_prefetch_traced.py  embed_pt.py  embed_queue.py  embed_traced.py  embeddings.py  hyperparam_search.py  refresh_db.py  scrape.py  serve.py  train.py  train_nn.py  utils.py
src/doggelganger/models/: __init__.py  base.py  linear.py  regression_models.py  resnet.py  xgb.py
supabase/: config.toml
supabase/functions/check_links/: index.ts
supabase/functions/embed/: .index.ts.swp  index.ts
supabase/migrations/: 20241007190504_remote_schema.sql
tests/: test_app.py  test_embeddings.py  test_scrape.py  test_serve.py  test_train.py  test_utils.py
weights/: alignment_model.json
