[project]
name = "doggelganger"
version = "0.1.1"
description = "Find you canine look alike!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake-useragent>=1.5.1",
    "jsonlines>=4.0.0",
    "litestar[standard]>=2.11.0",
    "llvmlite==0.43.0",
    "pillow>=10.4.0",
    "scikit-learn>=1.5.2",
    "torch==2.4.1",
    "tqdm>=4.66.5",
    "transformers>=4.44.2",
    "vecs>=0.4.4",
    "xgboost>=2.1.1",
]

[project.optional-dependencies]
train = [
    "optuna>=4.0.0",
    "ray[tune]>=2.37.0",
    "tensorboard>=2.18.0",
    "torchvision==0.19.1",
]
dev = [
    "adbc-driver-postgresql>=1.3.0",
    "aiohttp>=3.10.9",
    "connectorx>=0.4.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "plotly>=5.24.1",
    "polars>=1.16.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.5",
    "selenium>=4.25.0",
    "umap-learn>=0.5.7",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
embed = "doggelganger.embeddings:main"
serve = "doggelganger.serve:main"
train = "doggelganger.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
