[project]
name = "doggelganger"
version = "0.2.1"
description = "Find you canine look alike!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonlines>=4.0.0",
    "litestar[standard]>=2.13.0",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.47.1",
    "vecs>=0.4.5",
]

[dependency-groups]
dev = [
    "aiohttp>=3.11.11",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.5",
    "scikit-learn>=1.6.0",
    "selenium>=4.27.1",
    "xgboost>=2.1.3",
]
train = [
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "polars>=1.19.0",
    "ray[tune]>=2.40.0",
    "tensorboard>=2.18.0",
    "umap-learn>=0.5.7",
]

[project.scripts]
embed = "doggelganger.embeddings:main"
serve = "doggelganger.serve:main"
train = "doggelganger.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
exclude = ['notebooks']

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
